infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestcraft
  labels:
    name: nestcraft
    environment: production
    app: nestcraft-backend-framework
